Son çalışan sürüm

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li><a href="#intro" class="active">Introduction</a></li>
-							<li><a href="#first">First Section</a></li>
-							<li><a href="#second">Second Section</a></li>
-							<li><a href="#cta">Get Started</a></li>
+							<li><a href="#intro" class="active">Apps and Games</a></li>
+							<li><a href="#first">Features</a></li>
+							<li><a href="#second">statistics</a></li>
+							<li><a href="#cta">Go To Apps / Games</a></li>
 						</ul>
 					</nav>
 
@@ -47,7 +47,7 @@
 										</header>
 										<p>New generation pomodoro timer by UZUMSOFT </p>
 										<ul class="actions">
-											<li><a href="generic.html" class="button">Learn More</a></li>
+											<li><a href="generic.html" class="button">Go To App</a></li>
 										</ul>
 									</div>
 									<span class="image"><img src="images/pomodoro.png" alt="" /></span>
@@ -67,7 +67,7 @@
 										<p>-No bug</p>
 
 										<ul class="actions">
-											<li><a href="generic.html" class="button">Learn More</a></li>
+											<li><a href="generic.html" class="button">Go To Game</a></li>
 										</ul>
 									</div>
 									<span class="image"><img src="images/LastCat.png" alt="" /></span>
@@ -80,11 +80,9 @@
 										<header class="major">
 											<h2>Famous Places</h2>
 										</header>
-										<p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
-										adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
-										Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>
+										<p>You can learn imformation about famous places.</p>
 										<ul class="actions">
-											<li><a href="generic.html" class="button">Learn More</a></li>
+											<li><a href="generic.html" class="button">Go To App</a></li>
 										</ul>
 									</div>
 									<span class="image"><img src="images/icon512.png" alt="" /></span>
@@ -93,28 +91,28 @@
 						<!-- First Section -->
 							<section id="first" class="main special">
 								<header class="major">
-									<h2>Magna veroeros</h2>
+									<h2>Features</h2>
 								</header>
 								<ul class="features">
 									<li>
 										<span class="icon solid major style1 fa-code"></span>
-										<h3>Ipsum consequat</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<h3>Without mistakes code</h3>
+										<p>We wrote the best code we can.</p>
 									</li>
 									<li>
 										<span class="icon major style3 fa-copy"></span>
-										<h3>Amed sed feugiat</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<h3>Professional Team</h3>
+										<p>We have professional team.</p>
 									</li>
 									<li>
 										<span class="icon major style5 fa-gem"></span>
-										<h3>Dolor nullam</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<h3>Free Apps And Games</h3>
+										<p>We publish our apps and games for free.</p>
 									</li>
 								</ul>
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="generic.html" class="button">Learn More</a></li>
+										<li><a href="generic.html" class="button">Go To Apps / Games</a></li>
 									</ul>
 								</footer>
 							</section>
@@ -122,36 +120,36 @@
 						<!-- Second Section -->
 							<section id="second" class="main special">
 								<header class="major">
-									<h2>Ipsum consequat</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+									<h2>Statistics</h2>
+									<p>You can see our statistics here.<br />
+									</p>
 								</header>
 								<ul class="statistics">
 									<li class="style1">
-										<span class="icon solid fa-code-branch"></span>
-										<strong>5,120</strong> Etiam
+										<span class="icon solid fa-signal"></span>
+										<strong>0</strong> Download Times
 									</li>
 									<li class="style2">
-										<span class="icon fa-folder-open"></span>
-										<strong>8,192</strong> Magna
+										<span class="icon fa-gem"></span>
+										<strong>0</strong> Comments
 									</li>
 									<li class="style3">
-										<span class="icon solid fa-signal"></span>
-										<strong>2,048</strong> Tempus
-									</li>
-									<li class="style4">
 										<span class="icon solid fa-laptop"></span>
-										<strong>4,096</strong> Aliquam
+										<strong>3</strong> Apps
+									</li>
+									<!--<li class="style4">
+										<span class="icon solid fa-laptop"></span>
+										<strong>3</strong> Apps
 									</li>
 									<li class="style5">
 										<span class="icon fa-gem"></span>
 										<strong>1,024</strong> Nullam
-									</li>
+									</li>-->
 								</ul>
-								<p class="content">Nam elementum nisl et mi a commodo porttitor. Morbi sit amet nisl eu arcu faucibus hendrerit vel a risus. Nam a orci mi, elementum ac arcu sit amet, fermentum pellentesque et purus. Integer maximus varius lorem, sed convallis diam accumsan sed. Etiam porttitor placerat sapien, sed eleifend a enim pulvinar faucibus semper quis ut arcu. Ut non nisl a mollis est efficitur vestibulum. Integer eget purus nec nulla mattis et accumsan ut magna libero. Morbi auctor iaculis porttitor. Sed ut magna ac risus et hendrerit scelerisque. Praesent eleifend lacus in lectus aliquam porta. Cras eu ornare dui curabitur lacinia.</p>
+								<p class="content">We have 0 times downloads, 0 times comments and 3 apps.</p>
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="generic.html" class="button">Learn More</a></li>
+										<li><a href="generic.html" class="button">Go To Apps / Games</a></li>
 									</ul>
 								</footer>
 							</section>
@@ -159,13 +157,13 @@
 						<!-- Get Started -->
 							<section id="cta" class="main special">
 								<header class="major">
-									<h2>Congue imperdiet</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+									<h2>Install our apps</h2>
+									<p>You can click the button and install our android Apps / Games<br />
+										</p>
 								</header>
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="generic.html" class="button primary">Get Started</a></li>
+										<li><a href="generic.html" class="button primary">Go to Apps / Games</a></li>
 										<li><a href="generic.html" class="button">Learn More</a></li>
 									</ul>
 								</footer>
@@ -176,17 +174,15 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
-							<h2>Aliquam sed mauris</h2>
-							<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula erat egestas velit, vitae tincidunt odio.</p>
+							<h2>About us</h2>
+							<p>We started to create Android Apps / Games in 2020. </p>
 							<ul class="actions">
 								<li><a href="generic.html" class="button">Learn More</a></li>
 							</ul>
 						</section>
 						<section>
-							<h2>Etiam feugiat</h2>
+							<h2>Contact us</h2>
 							<dl class="alt">
-								<dt>Phone</dt>
-								<dd>(000) 000-0000 x 0000</dd>
 								<dt>Email</dt>
 								<dd><a href="#">uzumsoft@gmail.com</a></dd>
 							</dl>
