Instagram eklendi son sürüm

--- a/index.html
+++ b/index.html
@@ -187,11 +187,15 @@
 								<dd><a href="#">uzumsoft@gmail.com</a></dd>
 							</dl>
 							<ul class="icons">
-								<li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>
+								<!--<li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>
 								<li><a href="#" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
 								<li><a href="#" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
 								<li><a href="#" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li>
+								<li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li>-->	
+								<li><a href="https://github.com/UZUMSOFT" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
+								<li><a href="https://www.instagram.com/uzumsoft/" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
+
+
 							</ul>
 						</section>
 						<p class="copyright">&copy; UZUMSOFT. ALL right reserved. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
