--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 					<header id="header" class="alt">
 						<span class="logo"><img src="images/UZUM.png" alt="" /></span>
 						<h1>UZUMSOFT</h1>
-						<p>Welcome to website of UZUMSOFT<br />
-						Designed by <a href="">UZUMSOFT</a>  </p>
+						<p>Welcome to website of UZUMSOFT</p>
+						<p>Designed by <a href="">UZUMSOFT</a>  </p>
 					</header>
 
 				<!-- Nav -->
