--- a/generic.html
+++ b/generic.html
@@ -21,7 +21,7 @@
 					<header id="header">
 						<h1>About as</h1>
 						<p>We started to create Android Apps / Games in 2020.
-						For to go imformation go down.
+						For to go imformation scroll down.
 						</p>
 					</header>
 
