Added pomodoro link

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<span class="logo"><img src="images/UZUM.png" alt="" /></span>
 						<h1>UZUMSOFT</h1>
 						<p>Welcome to website of UZUMSOFT</p>
-						<p>Designed by <a href="">UZUMSOFT</a>  </p>
+						<p>Designed by <a href="https://play.google.com/store/apps/developer?id=UZUMSOFT">UZUMSOFT</a>  </p>
 					</header>
 
 				<!-- Nav -->
@@ -47,7 +47,7 @@
 										</header>
 										<p>New generation pomodoro timer by UZUMSOFT </p>
 										<ul class="actions">
-											<li><a href="generic.html" class="button">Go To App</a></li>
+											<li><a href="https://play.google.com/store/apps/details?id=com.uzumsoft.pomodoro" class="button">Go To App</a></li>
 										</ul>
 									</div>
 									<span class="image"><img src="images/pomodoro.png" alt="" /></span>
@@ -163,7 +163,7 @@
 								</header>
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="generic.html" class="button primary">Go to Apps / Games</a></li>
+										<li><a href="https://play.google.com/store/apps/developer?id=UZUMSOFT" class="button primary">Go to Apps / Games</a></li>
 										<li><a href="generic.html" class="button">Learn More</a></li>
 									</ul>
 								</footer>
