--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 										<p>-No bug</p>
 
 										<ul class="actions">
-											<li><a href="generic.html" class="button">Go To Game</a></li>
+											<li><a href="https://play.google.com/store/apps/details?id=com.uzumsoft.catchthecat" class="button">Go To Game</a></li>
 										</ul>
 									</div>
 									<span class="image"><img src="images/LastCat.png" alt="" /></span>
@@ -80,9 +80,9 @@
 										<header class="major">
 											<h2>Famous Places</h2>
 										</header>
-										<p>You can learn imformation about famous places.</p>
+										<p>You can learn information about famous places.</p>
 										<ul class="actions">
-											<li><a href="generic.html" class="button">Go To App</a></li>
+											<li><a href="https://play.google.com/store/apps/details?id=com.uzumsoft.famousplaces" class="button">Go To App</a></li>
 										</ul>
 									</div>
 									<span class="image"><img src="images/icon512.png" alt="" /></span>
