--- a/generic.html
+++ b/generic.html
@@ -46,7 +46,7 @@
 							<h2>About us</h2>
 							<p>We started to create Android Apps / Games in 2020. </p>
 							<ul class="actions">
-								<li><a href="#" class="button">Learn More</a></li>
+								<li><a href="https://play.google.com/store/apps/developer?id=UZUMSOFT" class="button">Go to Apps / Games</a></li>
 							</ul>
 						</section>
 						<section>
