--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 								</ul>
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="generic.html" class="button">Go To Apps / Games</a></li>
+										<li><a href="https://play.google.com/store/apps/developer?id=UZUMSOFT" class="button">Go To Apps / Games</a></li>
 									</ul>
 								</footer>
 							</section>
@@ -127,7 +127,7 @@
 								<ul class="statistics">
 									<li class="style1">
 										<span class="icon solid fa-signal"></span>
-										<strong>0</strong> Download Times
+										<strong>5</strong> Download Times
 									</li>
 									<li class="style2">
 										<span class="icon fa-gem"></span>
