--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 										<header class="major">
 											<h2>Survive</h2>
 										</header>
-										<p>You have to survive!.</p>
+										<p>You have to survive!</p>
 										<ul class="actions">
 											<li><a href="https://play.google.com/store/apps/developer?id=UZUMSOFT" class="button">Go To Game</a></li>
 										</ul>
@@ -77,7 +77,7 @@
 										<header class="major">
 											<h2>Tic Tac Toe</h2>
 										</header>
-										<p>Touch to squares and win the game!.</p>
+										<p>Touch to squares and win the game!</p>
 										<ul class="actions">
 											<li><a href="https://play.google.com/store/apps/developer?id=UZUMSOFT" class="button">Go To Game</a></li>
 										</ul>
