--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<span class="logo"><img src="images/UZUM.png" alt="" /></span>
 						<h1>UZUMSOFT</h1>
 						<p>Welcome to website of UZUMSOFT</p>
-						<p>Designed by <a href="https://play.google.com/store/apps/developer?id=UZUMSOFT">UZUMSOFT</a>  </p>
+						<p>Designed by <a href="https://play.google.com/store/apps/dev?id=6319082677435146433">UZUMSOFT for Android users.</a>  </p>
 					</header>
 
 				<!-- Nav -->
@@ -63,7 +63,7 @@
 										</header>
 										<p>You have to survive!</p>
 										<ul class="actions">
-											<li><a href="https://play.google.com/store/apps/developer?id=UZUMSOFT" class="button">Go To Game</a></li>
+											<li><a href="https://play.google.com/store/apps/dev?id=6319082677435146433" class="button">Go To Game</a></li>
 										</ul>
 									</div>
 									<span class="image"><img src="images/survive.png" alt="" /></span>
@@ -79,7 +79,7 @@
 										</header>
 										<p>Touch to squares and win the game!</p>
 										<ul class="actions">
-											<li><a href="https://play.google.com/store/apps/developer?id=UZUMSOFT" class="button">Go To Game</a></li>
+											<li><a href="https://play.google.com/store/apps/dev?id=6319082677435146433" class="button">Go To Game</a></li>
 										</ul>
 									</div>
 									<span class="image"><img src="images/tictactoe.png" alt="" /></span>
@@ -162,7 +162,7 @@
 								</ul>
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="https://play.google.com/store/apps/developer?id=UZUMSOFT" class="button">Go To Apps / Games</a></li>
+										<li><a href="https://play.google.com/store/apps/dev?id=6319082677435146433" class="button">Go To Apps / Games</a></li>
 									</ul>
 								</footer>
 							</section>
@@ -177,7 +177,7 @@
 								<ul class="statistics">
 									<li class="style1">
 										<span class="icon solid fa-signal"></span>
-										<strong>5</strong> Download Times
+										<strong>15</strong> Download Times
 									</li>
 									<li class="style2">
 										<span class="icon fa-gem"></span>
@@ -185,7 +185,7 @@
 									</li>
 									<li class="style3">
 										<span class="icon solid fa-laptop"></span>
-										<strong>3</strong> Apps
+										<strong>6</strong> Apps
 									</li>
 									<!--<li class="style4">
 										<span class="icon solid fa-laptop"></span>
@@ -196,10 +196,10 @@
 										<strong>1,024</strong> Nullam
 									</li>-->
 								</ul>
-								<p class="content">We have 0 times downloads, 0 times comments and 3 apps.</p>
+								<p class="content">We have 15 times downloads, 0 times comments and 6 apps.</p>
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="generic.html" class="button">Go To Apps / Games</a></li>
+										<li><a href="https://play.google.com/store/apps/dev?id=6319082677435146433" class="button">Go To Apps / Games</a></li>
 									</ul>
 								</footer>
 							</section>
@@ -213,7 +213,7 @@
 								</header>
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="https://play.google.com/store/apps/developer?id=UZUMSOFT" class="button primary">Go to Apps / Games</a></li>
+										<li><a href="https://play.google.com/store/apps/dev?id=6319082677435146433" class="button primary">Go to Apps / Games</a></li>
 										<li><a href="generic.html" class="button">Learn More</a></li>
 									</ul>
 								</footer>
