--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 										</header>
 										<p>You have to survive!</p>
 										<ul class="actions">
-											<li><a href="https://play.google.com/store/apps/dev?id=6319082677435146433" class="button">Go To Game</a></li>
+											<li><a href="https://play.google.com/store/apps/details?id=com.mstgames.TryToStayAlive" class="button">Go To Game</a></li>
 										</ul>
 									</div>
 									<span class="image"><img src="images/survive.png" alt="" /></span>
@@ -79,7 +79,7 @@
 										</header>
 										<p>Touch to squares and win the game!</p>
 										<ul class="actions">
-											<li><a href="https://play.google.com/store/apps/dev?id=6319082677435146433" class="button">Go To Game</a></li>
+											<li><a href="https://play.google.com/store/apps/details?id=com.mstgames.tictactoe" class="button">Go To Game</a></li>
 										</ul>
 									</div>
 									<span class="image"><img src="images/tictactoe.png" alt="" /></span>
