--- a/generic.html
+++ b/generic.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1>About as</h1>
+						<h1>About us</h1>
 						<p>We started to develop Android Apps / Games in 2020.
 						For to go information scroll down.
 						</p>
