--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 					<header id="header" class="alt">
 						<span class="logo"><img src="images/UZUM.png" alt="" /></span>
 						<h1>UZUMSOFT</h1>
-						<p>Welcome to our website </p>
-						<p>Designed by <a href="https://play.google.com/store/apps/dev?id=6319082677435146433">UZUMSOFT</a> for Android users. </p>
+						<p>Welcome to our website. If  you want to use our app scroll down!</p>
+						<p>Founded by <a href="http://emretokgoz.github.io/">EMRE TOKGÖZ</a> for Android users. </p>
 					</header>
 
 				<!-- Nav -->
