--- a/generic.html
+++ b/generic.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Generic - Stellar by HTML5 UP</title>
+		<title>About us</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,32 +20,33 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>About us</h1>
-						<p>We started to develop Android Apps / Games in 2020.
-						For to go information scroll down.
+						<p>These apps and games developed by <a href="http://emretokgoz.github.io/">EMRE TOKGÖZ.</a>
 						</p>
+						<li><a href="https://play.google.com/store/apps/dev?id=6319082677435146433" class="button primary">Install our apps and games from Google Play.</a></li>
+
 					</header>
 
 				<!-- Main -->
-					<div id="main">
+					<!-- <div id="main"> -->
 
-						<!-- Content -->
-							<section id="content" class="main">
-								<span class="image main"><img src="images/simetrikgrafik.png" alt="" /></span>
-									<h2>About UZUMSOFT</h2>
-									<p>We started to develop Android Apps / Games in 2020. We will share our games and apps with you! Stay tuned for see our new apps and games!</p>
-							</section>
+						<!-- <!-- Content --> -->
+							<!-- <section id="content" class="main"> -->
+								<!-- <span class="image main"><img src="images/simetrikgrafik.png" alt="" /></span> -->
+									<!-- <h2>About UZUMSOFT</h2> -->
+									<!-- <p>We started to develop Android Apps / Games in 2020. We will share our games and apps with you! Stay tuned for see our new apps and games!</p> -->
+							<!-- </section> -->
 
-					</div>
+					<!-- </div> -->
 
 				<!-- Footer -->
 					<footer id="footer">
-						<section>
-							<h2>About us</h2>
-							<p>We started to develop Android Apps / Games in 2020. </p>
-							<ul class="actions">
-								<li><a href="https://play.google.com/store/apps/developer?id=UZUMSOFT" class="button">Go to Apps / Games</a></li>
-							</ul>
-						</section>
+						<!-- <section> -->
+							<!-- <h2>About us</h2> -->
+							<!-- <p></p> -->
+							<!-- <ul class="actions"> -->
+								<!-- <li><a href="https://play.google.com/store/apps/developer?id=UZUMSOFT" class="button">Go to Apps / Games</a></li> -->
+							<!-- </ul> -->
+						<!-- </section> -->
 						<section>
 							<h2>Contact us</h2>
 							<dl class="alt">
