--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<span class="logo"><img src="images/UZUM.png" alt="" /></span>
 						<h1>UZUMSOFT</h1>
 						<p>Welcome to website of UZUMSOFT</p>
-						<p>Apps and games developed by <a href="http://emretokgoz.github.io/">EMRE TOKGÖZ</a> for Android users.</p>
+						<p>These apps and games developed by <a href="http://emretokgoz.github.io/">EMRE TOKGÖZ</a> for Android users.</p>
 					</header>
 
 				<!-- Nav -->
