--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<span class="logo"><img src="images/UZUM.png" alt="" /></span>
 						<h1>UZUMSOFT</h1>
 						<p>Welcome to website of UZUMSOFT</p>
-						<p>These apps and games developed by <a href="http://emretokgoz.github.io/">EMRE TOKGÖZ</a> for Android users.</p>
+						<p>These apps and games developed for Android users.</p>
 					</header>
 
 				<!-- Nav -->
@@ -47,9 +47,9 @@
 										<header class="major">
 											<h2>Survive</h2>
 										</header>
-										<p>In this game you should collect pickups and make new best score. For more, install my game from Google Play.</p>
+										<p>In this game you should collect pickups and make new best score.</p>
 										<ul class="actions">
-											<li><a href="https://play.google.com/store/apps/details?id=com.mstgames.TryToStayAlive" class="button">Go To Game</a></li>
+											<li><a href="https://play.google.com/store/apps/details?id=com.uzumsoft.Survive" class="button">Go To Game</a></li>
 										</ul>
 									</div>
 									<span class="image"><img src="images/survive.png" alt="" /></span>
@@ -62,7 +62,7 @@
 										<header class="major">
 											<h2>Pomodoro Timer</h2>
 										</header>
-										<p>This is one of the most useful pomodoro apps. For more, install my application from Google Play. </p>
+										<p>This is one of the most useful pomodoro apps.</p>
 										<ul class="actions">
 											<li><a href="https://play.google.com/store/apps/details?id=com.uzumsoft.pomodoro" class="button">Go To App</a></li>
 										</ul>
