--- a/generic.html
+++ b/generic.html
@@ -21,7 +21,7 @@
 						<h1>About us</h1>
 						<p>These apps and games developed by <a href="http://emretokgoz.github.io/">EMRE TOKGÖZ.</a>
 						</p>
-						<li><a href="https://play.google.com/store/apps/dev?id=6319082677435146433" class="button primary">Install our apps and games from Google Play.</a></li>
+						<li><a href="https://play.google.com/store/apps/dev?id=6319082677435146433" class="button primary">Go to Apps / Games</a></li>
 
 					</header>
 
