--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<header id="header" class="alt">
 						<span class="logo"><img src="images/UZUM.png" alt="" /></span>
 						<h1>UZUMSOFT</h1>
-						<p>Welcome to website of UZUMSOFT</p>
+						<p>Welcome</p>
 						<p>These apps and games developed for Android users.</p>
 					</header>
 
@@ -78,7 +78,7 @@
 										<header class="major">
 											<h2>Tic Tac Toe</h2>
 										</header>
-										<p>Touch to squares and win the game!</p>
+										<p>Touch to squares and win the game.</p>
 										<ul class="actions">
 											<li><a href="https://play.google.com/store/apps/details?id=com.mstgames.tictactoe" class="button">Go To Game</a></li>
 										</ul>
@@ -93,7 +93,7 @@
 										<header class="major">
 											<h2>Famous Places | Landmark</h2>
 										</header>
-										<p>You can learn information about famous places! </p>
+										<p>You can learn information about famous places. </p>
 										<ul class="actions">
 											<li><a href="https://play.google.com/store/apps/details?id=com.uzumsoft.famousplaces" class="button">Go To App</a></li>
 										</ul>
