--- a/index.html
+++ b/index.html
@@ -19,10 +19,8 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<span class="logo"><img src="images/UZUM.png" alt="" /></span>
-						<h1>UZUMSOFT</h1>
-						<p>Welcome</p>
-						<p>These apps and games developed for Android users.</p>
+						<!-- <span class="logo"><img src="images/UZUM.png" alt="" /></span>-->
+						<h2>UZUMSOFT</h2>
 					</header>
 
 				<!-- Nav -->
