--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<!-- <span class="logo"><img src="images/UZUM.png" alt="" /></span>-->
-						<h2>UZUMSOFT</h2>
+						<h1>UZUMSOFT</h1>
+						<p>Simple games and apps for android users.</p>
 					</header>
 
 				<!-- Nav -->
@@ -43,9 +44,9 @@
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
-											<h2>Survive</h2>
+											<h2>Touch The Stars,Not The Thorns</h2>
 										</header>
-										<p>In this game you should collect pickups and make new best score.</p>
+										<p>In this game you should touch the stars to score, if you touch the thorns, game over.</p>
 										<ul class="actions">
 											<li><a href="https://play.google.com/store/apps/details?id=com.uzumsoft.Survive" class="button">Go To Game</a></li>
 										</ul>
@@ -53,22 +54,6 @@
 									<span class="image"><img src="images/survive.png" alt="" /></span>
 								</div>
 							</section>
-
-							<section id="intro" class="main">
-								<div class="spotlight">
-									<div class="content">
-										<header class="major">
-											<h2>Pomodoro Timer</h2>
-										</header>
-										<p>This is one of the most useful pomodoro apps.</p>
-										<ul class="actions">
-											<li><a href="https://play.google.com/store/apps/details?id=com.uzumsoft.pomodoro" class="button">Go To App</a></li>
-										</ul>
-									</div>
-									<span class="image"><img src="images/pomodoro.png" alt="" /></span>
-								</div>
-							</section>
-
 
 							<section id="intro3" class="main">
 								<div class="spotlight">
