--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<h1>UZUMSOFT</h1>
-						<p>	Simple and free <a href="">apps and games</a> for android users.</p>
+						<p>	Simple, free <a href="">apps and games</a> for android users.</p>
 					</header>
 
 				<!-- Nav -->
